--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,15 @@
     <string name="contact_hint">Enter contact\'s email</string>
     <string name="add_contact_btn">ADD CONTACT</string>
 
+    <string name="mon">Monday</string>
+    <string name="tue">Tuesday</string>
+    <string name="wed">Wednesday</string>
+    <string name="thu">Thursday</string>
+    <string name="fri">Friday</string>
+    <string name="sat">Saturday</string>
+    <string name="sun">Sunday</string>
+    <string name="cycle_sure">Confirm</string>
+    <string name="vibration">Vibrate</string>
+    <string name="ring">Ring</string>
 
 </resources>
