--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="text_autofocus_enabled">Autofocus enabled.</string>
     <string name="text_autofocus_disabled">Autofocus disabled. Tap to focus.</string>
     <string name="text_image_stored">Image stored in path </string>
+    <string name="update_nickname">Update nickname</string>
 
     <!-- Key names (equal in all languages) -->
     <string name="visor_shared_preference_name">VisorAndroidSharedPreference</string>
