--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,7 @@
     <string name="key_preference_color_mode">VisorAndroidKeyPreferenceColorMode</string>
     <string name="key_preference_autofocus_mode">VisorAndroidKeyPreferenceAutofocusMode</string>
     <string name="key_preference_activity_button_mode">VisorAndroidKeyPreferenceButtonMode</string>
+    <string name="contact_profile_email">Email:</string>
 
 
 </resources>
