--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,9 @@
     <string name="key_preference_autofocus_mode">VisorAndroidKeyPreferenceAutofocusMode</string>
     <string name="key_preference_activity_button_mode">VisorAndroidKeyPreferenceButtonMode</string>
     <string name="contact_profile_email">Email:</string>
+    <string name="google_sign_in">Google sign-in</string>
+    <string name="facebook_sign_in">Facebook sign-in</string>
+
 
 
 </resources>
